objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountZoneFS__c</fullName>
        <description>Custom field no longer used</description>
        <formula>Account.ZoneFS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Zone FS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountZoneIAG__c</fullName>
        <description>Custom field no longer used</description>
        <formula>Account.ZoneIAG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Zone IAG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountZoneRS__c</fullName>
        <description>Custom field no longer used</description>
        <formula>Account.ZoneRADU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Zone RS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountZoneWHSE__c</fullName>
        <description>Custom field no longer used</description>
        <formula>Account.ZoneWHSE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Zone WHSE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccruedUnApprovedExpenseTotal__c</fullName>
        <description>Custom Concur field</description>
        <label>Accruing/Unpaid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcountParentId__c</fullName>
        <description>Reference to the Account's Parent Account; used in Apex</description>
        <formula>Account.ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AcountParentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveCDRQualitativeData__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used in the CDR Process</description>
        <label>Active CDR Qualitative Data</label>
        <referenceTo>CDRQualitativeData__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityCampaignID__c</fullName>
        <description>Integrated with Pardot and populated by Pardot with concatenated campaign names when an email recipient triggers a Pardot action by opening the email or clicking through it. This field was created as part of the Digital Selling Scoring Project</description>
        <label>Activity Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityCampaign__c</fullName>
        <description>Integrated with Pardot and populated by Pardot with the most recent campaign name when an email recipient triggers a Pardot action by opening the email or clicking through it. This field was created as part of the Digital Selling Scoring Project.</description>
        <label>Activity Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityGapTarget__c</fullName>
        <description>Custom field no longer used</description>
        <formula>365/ ActivityTargetWHSE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Gap Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActivityIndicator__c</fullName>
        <description>Custom field no longer used</description>
        <formula>IF( LastCallMeetingDate__c  &gt;= TODAY()-30,IMAGE("/img/samples/light_green.gif", "green", 14, 36), 
IF(LastCallMeetingDate__c   &gt;= TODAY()-60,IMAGE("/img/samples/light_yellow.gif", "yellow", 14, 36), 
IF(LastCallMeetingDate__c   &gt;= TODAY()-90,IMAGE("/img/samples/light_red.gif", "red", 14, 36), 
IMAGE("/img/samples/light_red.gif", "red", 14, 36))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green - The last call/meeting activity was created in the last 60 days
Yellow - The last call/meeting activity was created in the last 61-90 days
Red - The last call/meeting activity was created in the last 91+ days</inlineHelpText>
        <label>Activities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTargetQ__c</fullName>
        <description>Custom field no longer used</description>
        <formula>CASE(Tier__c, '1', 3, '2', 2,'3',1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActivityTargetWHSE__c</fullName>
        <description>Custom field no longer used</description>
        <formula>case(text(PROTierWHSE__c),'1',8,'2',6,'3',4,0)/4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Target WHSE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AffiliateContactFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto populated by process builder for all new Affiliate Contacts added but can be manually maintained to control who is brought into the Declarative Roll-up that populates the Requested Speaker on the Case from the related Events</description>
        <inlineHelpText>Auto populated by process builder for all new Affiliate Contacts added but can be manually maintained to control who is brought into the Declarative Roll-up that populates the Requested Speaker on the Case from the related Events</inlineHelpText>
        <label>Affiliate Contact Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ArtemusManualUpsert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>N/A No longer used.</description>
        <label>ArtemusManualUpsert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPLDate__c</fullName>
        <description>The date that the top 200 List flag was set. If the field is already flagged then do not update this field.</description>
        <inlineHelpText>The date that the top 200 List flag was set.</inlineHelpText>
        <label>Top 200 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BPL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Source: Updates will be made on a quarterly basis and submitted by sales to john Scuzzarella and then we bulk update</description>
        <inlineHelpText>Indicates that the Rep/Contact is at a Top 200</inlineHelpText>
        <label>Top 200 Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPLimage__c</fullName>
        <description>Formula based on BPL and BPLDate</description>
        <formula>IF(BPL__c=true, IMAGE("servlet/servlet.FileDownload?file=015F0000004LjxR","GOLD",16,16)  &amp;  ' Since ' &amp;  Text(month(BPLDate__c))&amp;'/'&amp;Text(day(BPLDate__c))&amp;'/'&amp;Text(year(BPLDate__c)) ,"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top 200</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BS__c</fullName>
        <description>Custom field no longer used</description>
        <formula>IF ( 
$User.ActivityChannelName__c = 'RETIREMENT', 
HYPERLINK('https://www.brightscope.com/beacon/advisor-report/advisor/overview/' &amp;  BrightscopeId__c &amp; '/','Click Here'), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BookAUM__c</fullName>
        <description>Added as a profile field to support the Greater Texas Pilot and all of sales now</description>
        <inlineHelpText>Not natixis AUM, That is the 'Current AUM' value.</inlineHelpText>
        <label>Book AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BrightscopeId__c</fullName>
        <description>Custom field no longer used</description>
        <inlineHelpText>Custom field no longer used</inlineHelpText>
        <label>Brightscope Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BuildsWithETFs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Integrated from EDW</description>
        <label>Builds With ETFs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BuildsWithMutualFunds__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Integrated from EDW</description>
        <label>Builds With Mutual Funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added for the Servicing App Enhancements for IDU</description>
        <label>CDP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRDID__c</fullName>
        <description>Source: MARS na_load_rep.CrdId
Loaded by a nightly job. Data Flow: Mars -&gt; SF</description>
        <label>CRD ID#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallPreference__c</fullName>
        <description>Source: MARS na_load_rep.CallCode
Loaded by a nightly job and manually updated in the UI. Data Flow: SF -&gt; Mars</description>
        <inlineHelpText>Update this field if you are aware of the contact's call preferences, it defaults to ALWAYS.</inlineHelpText>
        <label>Call Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALWAYS</fullName>
                </value>
                <value>
                    <fullName>NEVER</fullName>
                </value>
                <value>
                    <fullName>AFTER MARKET HOURS</fullName>
                </value>
                <value>
                    <fullName>ON REQUEST</fullName>
                </value>
                <value>
                    <fullName>BEFORE MARKET HOURS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call__c</fullName>
        <description>Click to dial function</description>
        <formula>if (Phone&lt;&gt;'',HYPERLINK('http://riskwbosp01:8080/cisco-web/click_to_dial?userId=' &amp; $User.UserID__c &amp; '&amp;phone=' &amp; Phone ,IMAGE("/servlet/servlet.FileDownload?file=015F0000004LsRw","Call",16,16),'_blank' )&amp;' '&amp; Phone,"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Outcome__c</fullName>
        <description>Custom field used for campaign proof of concept,it triggers related process builder</description>
        <label>Campaign Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>To Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseSafeId__c</fullName>
        <description>18 digit unique Saleforce ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>Wells FA data in Salesforce requested by Joseph Labresh. This field labels each FA by what channel they work in: “PCG”, “WBS”, and “Finet”.</description>
        <inlineHelpText>This field is about Wells FA data, it labels each FA by what channel they work in: “PCG”, “WBS”, and “Finet”.</inlineHelpText>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PCG</fullName>
                </value>
                <value>
                    <fullName>WBS</fullName>
                </value>
                <value>
                    <fullName>FiNet</fullName>
                </value>
                <value>
                    <fullName>RIA Hybrid</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>RIA IFA Advisor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Licensed Branch Employee</fullName>
                </value>
                <value>
                    <fullName>Insurance Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <description>Added for the Servicing App Enhancements for IDU</description>
        <label>Collateral</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Capital Markets Notes</fullName>
                </value>
                <value>
                    <fullName>Clarity Investment Committee</fullName>
                </value>
                <value>
                    <fullName>Global Survey of Financial Advisors</fullName>
                </value>
                <value>
                    <fullName>Global Survey of Individual Investors</fullName>
                </value>
                <value>
                    <fullName>Global Survey of Institutional Investors</fullName>
                </value>
                <value>
                    <fullName>Jack Talk</fullName>
                </value>
                <value>
                    <fullName>PRCG - Monthly Moderate Trends Report</fullName>
                </value>
                <value>
                    <fullName>PRCG - Quarterly U.S. Trends Report</fullName>
                </value>
                <value>
                    <fullName>Quarterly Macro &amp; Trends WebEx</fullName>
                </value>
                <value>
                    <fullName>Quarterly PM Update Conference Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommentsModified__c</fullName>
        <inlineHelpText>Custom field to capture who last updated the description field</inlineHelpText>
        <label>Description Modified By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommitmentPicklist__c</fullName>
        <description>Used in the Full Service process of qualifying Contacts as Full Service Clients or Clients. Select the related open CPE Opportunity and update the Sales Stage to Full Service Clients or Client which will automatically update this field to the same value.</description>
        <inlineHelpText>Used in the Full Service process of qualifying Contacts as Full Service Clients or Clients. Select the related open CPE Opportunity and update the Sales Stage to Full Service Clients or Client which will automatically update this field to the same value.</inlineHelpText>
        <label>Commitment Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Service Client</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Expired Full Service Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <description>Custom formula field that displays an image when the Contact is full service and the renewal date hasn't passed</description>
        <formula>IF( ISPICKVAL( CommitmentPicklist__c , 'Full Service Client'  ) &amp;&amp; PRCGServiceRenewalDate__c  &gt; TODAY(), IMAGE("/img/icon/entitlements24.png","Red",16,16) &amp;  ' Full Service Client until ' &amp;  Text(month( PRCGServiceRenewalDate__c ))&amp;'/'&amp;Text(day(PRCGServiceRenewalDate__c))&amp;'/'&amp;Text(year(PRCGServiceRenewalDate__c)),  "")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commitment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetitorStrategies__c</fullName>
        <description>Part of the IDU process for profiling their Contacts.</description>
        <label>Competitor Strategies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <description>Requested by IDU Northeast as part of the Servicing App project.</description>
        <label>Consultant</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AKSIA LLC</fullName>
                </value>
                <value>
                    <fullName>ALAN D BILLER &amp; ASSOCIATES</fullName>
                </value>
                <value>
                    <fullName>ALBOURNE PARTNERS</fullName>
                </value>
                <value>
                    <fullName>ANGELES INVESTMENT ADVISORS</fullName>
                </value>
                <value>
                    <fullName>AON HEWITT FINANCIAL ADVISORS, LLC</fullName>
                </value>
                <value>
                    <fullName>AON HEWITT FINANCIAL RISK CONSULTING</fullName>
                </value>
                <value>
                    <fullName>ARNERICH MASSENA &amp; ASSOCIATES, INC</fullName>
                </value>
                <value>
                    <fullName>ASSET CONSULTING GROUP, LLC</fullName>
                </value>
                <value>
                    <fullName>ATLANTA CONSULTING GROUP</fullName>
                </value>
                <value>
                    <fullName>BANK OF AMERICA MERRILL LYNCH GLOBAL INSTITUTIONAL CONSULTING</fullName>
                </value>
                <value>
                    <fullName>BLUE EDGE CAPITAL, LLC</fullName>
                </value>
                <value>
                    <fullName>BUCK CONSULTANTS, LLC</fullName>
                </value>
                <value>
                    <fullName>CALLAN ASSOCIATES INC.</fullName>
                </value>
                <value>
                    <fullName>CAMBRIDGE ASSOCIATES LLC</fullName>
                </value>
                <value>
                    <fullName>CANTERBURY CONSULTING INCORPORATED</fullName>
                </value>
                <value>
                    <fullName>CARDINAL INVESTMENT ADVISORS, L.L.C.</fullName>
                </value>
                <value>
                    <fullName>CLIFFWATER LLC</fullName>
                </value>
                <value>
                    <fullName>COLONIAL CONSULTING, LLC</fullName>
                </value>
                <value>
                    <fullName>COOK STREET CONSULTING, INC.</fullName>
                </value>
                <value>
                    <fullName>CURCIO WEBB,LLC</fullName>
                </value>
                <value>
                    <fullName>DEMARCHE ASSOCIATES,INC.</fullName>
                </value>
                <value>
                    <fullName>ELLWOOD ASSOCIATES</fullName>
                </value>
                <value>
                    <fullName>FS ASSOCIATES</fullName>
                </value>
                <value>
                    <fullName>GREGORY.W.GROUP, INC.</fullName>
                </value>
                <value>
                    <fullName>HEINTZBERGER PAYNE</fullName>
                </value>
                <value>
                    <fullName>INVESTMENT PERFORMANCE SERVICES</fullName>
                </value>
                <value>
                    <fullName>JEFFREY SLOCUM &amp; ASSOCIATES</fullName>
                </value>
                <value>
                    <fullName>LCG ASSOCIATES, INC</fullName>
                </value>
                <value>
                    <fullName>MANGHAM ASSOCIATES, INC.</fullName>
                </value>
                <value>
                    <fullName>MARCO CONSULTING GROUP, INC.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactChannels__c</fullName>
        <description>Populated by the Declarative Lookup Rollup Summary 'ContactObjectContactTerritory'</description>
        <label>Contact Channels</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFirmCRD__c</fullName>
        <description>The formula display's the Contact's Office's Firm CRD ID. This field was created to be integrated into Pardot for Hard Bounce management and reporting. This field will be used to help identify Contacts that had a hard bounce and allow Data Operations to update those records.</description>
        <formula>Account.Firm_CRD__c</formula>
        <label>Contact Firm CRD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactTerritories__c</fullName>
        <description>Populated by a Declarative Lookup Rollup Summary 'ContactObjectContactTerritory' and has all values from the Contact Territory Table concatenated in this one field. https://globalplatform.my.salesforce.com/a0mF000000GXi8E</description>
        <label>Contact Territories</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Custom field to track contact county</description>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateActivity__c</fullName>
        <description>Custom field that when clicked opens a new browser window and auto populates activity fields.</description>
        <formula>HYPERLINK('/00T/e?who_id=' &amp; Id &amp; 
'&amp;what_id=' &amp; Account.Id &amp; 
'&amp;CF00NF000000CtBm4_lkid=' &amp; CASESAFEID('7012A000001RIx7') &amp; '&amp;tsk12=Completed' &amp;
'&amp;CF00NF000000CtBm4=' &amp; "POC Call Campaign Test 1", 'Create Activity')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Activity?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentAUMETF__c</fullName>
        <description>Custom field no longer used</description>
        <inlineHelpText>Custom field no longer used</inlineHelpText>
        <label>Current AUM ETF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentMonthActivity__c</fullName>
        <formula>if ( AND(LastCallMeetingDate__c &gt;= DATE(year(today()),month(TODAY()),1),LastCallMeetingDate__c &lt;= TODAY()),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_AUM_Formula_with_Label__c</fullName>
        <description>Custom field no longer used</description>
        <formula>"Current AUM: " &amp; 

SUBSTITUTE( 
IF(TranCurrentAUM__c&lt; 0, "(", "") &amp; "$" &amp; 
IF(ABS(TranCurrentAUM__c) &gt;= 1000000000, TEXT(FLOOR(TranCurrentAUM__c/ 1000000000)) &amp; ",", "") 
&amp; IF(ABS(TranCurrentAUM__c) &gt;= 1000000, RIGHT(TEXT(FLOOR(TranCurrentAUM__c/ 1000000)), 3) &amp; ",", "") 
&amp; IF(ABS(TranCurrentAUM__c) &gt;= 1000, RIGHT(TEXT(FLOOR(TranCurrentAUM__c/ 1000)), 3) &amp; ",", "") 
&amp; RIGHT(TEXT(FLOOR(TranCurrentAUM__c)), 3) 
&amp; RIGHT(TEXT(ROUND(TranCurrentAUM__c * 100, 0)), 0) 
&amp; IF(TranYTDPurchases__c &lt; 0, ")", "") 
,"-","")</formula>
        <label>Current AUM Leveled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomResearchProject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Full Service Project and is populated from Artemus. It is used to track the clients who opt in, but have not yet been fulfilled.</description>
        <inlineHelpText>Checked indicates the client would like a custom research project with a limit of two per year.  Requests are made through Artemus and accompanied by the Research Project RFP form.  A pre-call is needed with research project requests</inlineHelpText>
        <label>Custom Research Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by opt-out process with Cvent and Pardot</description>
        <label>Cvent Opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DesignationsClubLevelsRegion__c</fullName>
        <description>Custom field no longer used</description>
        <label>Designations/Club Levels Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DesignationsClubs__c</fullName>
        <description>Integrated from EDW</description>
        <label>Designations/Clubs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DiscretionaryManagement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added as a profile field to support the Greater Texas Pilot and currently used by IDU</description>
        <label>Discretionary Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the logic for Pardot integration. Pardot only allows 1 email to be loaded into it but will randomly select a record to sync with in Salesforce if duplicate emails exist.</description>
        <label>Duplicate Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDWAccountDurKey__c</fullName>
        <description>Formula pulling the Contact's Office Dur Key to pass in the related VF page for Tableau integration</description>
        <formula>Account.EDWDurKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EDW Account Dur Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDWDurKey__c</fullName>
        <description>EDW Durable Key that is the Data Warehouse unique identifier of records.</description>
        <externalId>true</externalId>
        <label>EDW Dur Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Servicing App project and requested by Chris J Hunter.</description>
        <label>ESG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ETFStrategistProspect__c</fullName>
        <description>Populated if the Account level field is flagged. Indicates that this is a ETF prospect.</description>
        <formula>Account.ETFStrategistProspect__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ETF Strategist Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ETFUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For sales users to manually track if an Advisor uses ETFs.  This data will be integrated but at the office level so this is to track the individual advisors.</description>
        <label>ETF Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailPreference__c</fullName>
        <description>Source: MARS na_load_rep.
Loaded by a nightly job. Data Flow: SF -&gt; Mars</description>
        <inlineHelpText>One-to-one email preference</inlineHelpText>
        <label>Email Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALWAYS</fullName>
                    <default>true</default>
                    <label>ALWAYS</label>
                </value>
                <value>
                    <fullName>NEVER</fullName>
                </value>
                <value>
                    <fullName>ON REQUEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailPreferencesRecalc__c</fullName>
        <description>When changed, the Email Preferences field (Pardot Pref Center) will be recalculated for this contact.  Can be used for mass recalcs if Preference Center categories or field labels change.</description>
        <label>Marketing Email Preferences Recalc</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailPreferences__c</fullName>
        <description>Lists the email preferences of the contact, based on Pardot Preference Center and opt-out fields.</description>
        <inlineHelpText>Marketing email preferences as selected by the contact/rep via the Email Preference Center.</inlineHelpText>
        <label>Marketing Email Preferences</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmployeeSegmentation__c</fullName>
        <description>Auto populated with the User trigger when new Sales users are created.  Manually populated when Marketing users are created.</description>
        <inlineHelpText>Auto populated with the User trigger when new Sales users are created.  Manually populated when Marketing users are created.</inlineHelpText>
        <label>Employee Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NGAM Marketing</fullName>
                </value>
                <value>
                    <fullName>NGAM Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entertainment__c</fullName>
        <description>Part of the IDU process for profiling their Contacts.</description>
        <label>Entertainment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DPC Symposium</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Newport Jazz Fest</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Prohibited</fullName>
                </value>
                <value>
                    <fullName>Skiing</fullName>
                </value>
                <value>
                    <fullName>Sporting Events</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventCampaignFieldsLastUpdatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who initiated the process builder to update the Event Campaign fields last</description>
        <label>Event Campaign Fields Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ContactCampaignFieldsUpdated</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventCampaignFieldsLastUpdated__c</fullName>
        <description>When the last time Invited By, Event Personalization Text, or Invited By Current Campaign were updated</description>
        <label>Event Campaign Fields Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventCampaignName__c</fullName>
        <description>Which event campaign do the Event Campaign fields represent</description>
        <label>Event Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventOptOutSync__c</fullName>
        <description>This field syncs to CVent to control Opt-out in that system</description>
        <formula>OR( HasOptedOutOfEmail, EventOptOut__c, SnoozeEmails__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Opt-out Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated by Pardot Preference Center.</description>
        <inlineHelpText>This field is updated by Pardot Preference Center.  If checked, the client has opted-out of Event emails (invitations, etc.)</inlineHelpText>
        <label>Event Opt-out</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>